# Tasker-To-Do

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: application.rs  main.rs  model.rs  presenter.rs  view.rs  window.ui
src/application/: task.rs  task_state.rs  task_view.rs  tasker.rs
src/model/: tasker_model.rs
src/presenter/: tasker_presenter.rs
src/task/: task.ui
src/ui/: tasker.ui
src/view/: tasker.rs  tasker_view.rs
