[package]
name = "tasker_to_do"
version = "0.1.0"
edition = "2021"
authors = ["Alex Howson (Skippy)"]
description = "A simple todo application to learn the GTK4 toolset"
homepage = "https://github.com/Steelstone3/Tasker-To-Do"
repository = "https://github.com/Steelstone3/Tasker-To-Do.git"
license = "GPLv3"
readme = "README.md"

[dependencies]
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"