[package]
name = "tasker_to_do"
version = "0.1.0"
edition = "2021"
authors = ["Alex Howson (Skippy)"]
description = "A simple todo application to learn the iced toolset"
homepage = "https://github.com/Steelstone3/Tasker-To-Do"
repository = "https://github.com/Steelstone3/Tasker-To-Do.git"
license = "GPLv3"
readme = "README.md"

[dependencies]
iced = { version = "0.10", features = ["async-std", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

#[package.metadata.deb]
#assets = [
#    ["target/release-opt/todos", "usr/bin/iced-todos", "755"],
#    ["iced-todos.desktop", "usr/share/applications/", "644"],
#]